# aws_lambda_no_authoriser

./: .gitignore  Dockerfile  LICENSE  README.md  deploying_lambda.html  deploying_lambda.ipynb  pyproject.toml  requirements.txt  template_no_auth.yaml
app/: lambda_predict.py
